Ensure good color contrast and add overflow for mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -14,21 +14,30 @@ body {
   font-family: "Poppins", sans-serif;
   display: flex;
   justify-content: center;
-  background-color: #344e41;
+  background-color: #578056;
   color: white;
   margin: 5rem 10rem 2.5rem;
 }
 
+.main-heading {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
 main {
-  background-color: #588157;
+  background-color: #344e41;
   border: 1px white solid;
   border-radius: 5px;
   padding: 1.5rem 3rem;
   width: 80vw;
 }
 
+main a {
+  color: #f5deb3;
+}
+
 .heading {
-  background-color: #344e41;
+  background-color: #578056;
   padding: 1rem;
   font-family: "Roboto", sans-serif;
   width: 10rem;
@@ -54,6 +63,10 @@ textarea {
 
 .preview {
   margin-top: 1.5rem;
+}
+
+.preview div {
+  overflow: auto;
 }
 
 footer {
